<resources>
    <string name="app_name">Goddess</string>
    <string name="places_api_key">AIzaSyA6TLxsFmCqD_Cgfo09Jce8wU8c4uhHoeE</string>
    <string name="action_retry">Retry</string>
    <string name="msg_no_internet">No internet connection available.</string>
    <string name="blank_data">Please enter data</string>
    <string name="blank_username">Please enter username</string>
    <string name="blank_email">Please enter email address</string>
    <string name="blank_first_name">Please enter first name</string>
    <string name="blank_last_name">Please enter last name</string>
    <string name="blank_phone">Please enter phone number</string>
    <string name="blank_password">Please enter password</string>
    <string name="blank_current_password">Please enter current password</string>
    <string name="blank_new_password">Please enter new password</string>
    <string name="blank_confirm_password">Please enter confirm password</string>
    <string name="blank_title">Please enter title</string>
    <string name="blank_desc">Please enter description</string>
    <string name="blank_address">Please select valid address</string>
    <string name="blank_assign_to">Please select assign to</string>
    <string name="invalid">Invalid data</string>
    <string name="msg_all_field_required">All fields are required.</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="invalid_confirm_password">Password and confirm password does not match</string>
    <string name="invalid_password">Password length should be minimum 8 characters.</string>
    <string name="invalid_phone">Please enter phone number between 10&#8211;15 digits.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="skip">Skip</string>
    <string name="skip_video">Skip Video</string>
    <string name="title_december">December: Inner Strength</string>
    <string name="title_home">Home</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_video">Videos</string>
    <string name="title_chat">Chat</string>
    <string name="title_shopping">Shopping</string>
    <string name="goddess">Goddess</string>
    <string name="recipe">Recipe</string>
    <string name="teacher">Teacher</string>
    <string name="share_calender">Share Calendar</string>
    <string name="features">Features</string>
    <string name="today_s_practice"><u>Today\'s practice</u></string>
    <string name="today_s_meal"><u>Today\'s meal plan</u></string>
    <string name="today_s_journal"><u>Today\'s journal prompt</u></string>
    <string name="complete_practice">Complete practice</string>
    <string name="view_recipe">View recipe</string>
    <string name="share">Share</string>
    <string name="calories">calories</string>
    <string name="minutes">minutes</string>
    <string name="lorem_ipsum_long"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lorem nisi, luctus a leo nec, mollis cursus purus. Praesent eget dapibus orci. In scelerisque sit amet enim eu ullamcorper. Curabitur ultrices enim sit amet quam porttitor, quis mattis nunc aliquam. Phasellus a orci vel ligula cursus porta nec eu erat. Proin fermentum sit amet arcu eu finibus. Integer ultrices est nisi, vitae tincidunt lectus gravida at. Praesent dictum arcu ut justo suscipit euismod. Proin vitae dolor risus. Aliquam ipsum nunc, mattis varius aliquam ut, finibus eget massa. Maecenas ac ultricies ante.

\n\nMaecenas commodo, neque nec mollis convallis, ante eros malesuada ligula, vel tincidunt enim orci non neque. Duis consectetur sit amet quam quis posuere. Donec in nibh porta, mattis ipsum ac, condimentum mi. Ut quam felis, luctus non odio fringilla, vehicula accumsan sapien. Suspendisse ultrices congue vestibulum. Nam et vehicula augue. Quisque feugiat, ipsum sed porta vulputate, nulla urna rutrum eros, ac lacinia arcu mauris vel nunc. Cras a mattis ligula. Donec ac dui est. Vestibulum luctus, risus a malesuada hendrerit, nunc lorem luctus tellus, eu mattis ante ligula id purus. Vivamus pharetra eleifend leo, non mattis leo molestie vel. Nullam interdum dui mi, eu ultricies lacus rhoncus ornare.

\n\nAenean at suscipit velit, ut scelerisque tellus. Proin tempus dolor neque, vel pellentesque urna accumsan vel. Vestibulum euismod arcu magna, ac cursus mauris porttitor vel. Pellentesque sed suscipit turpis. Curabitur porta rhoncus eros, vel fringilla odio volutpat ac. Sed non purus varius purus vehicula pharetra. Mauris a diam mauris. Duis dapibus neque nibh, a consectetur metus tincidunt non. Praesent sodales purus eu ultrices vestibulum. Etiam velit magna, accumsan at ligula vel, varius cursus lectus. Proin quis tincidunt tellus.

\n\nIn consectetur eros eu arcu rutrum ultricies. Maecenas molestie nisi et ornare porttitor. Phasellus id malesuada nunc. Duis maximus ligula ut magna tincidunt malesuada. Integer mattis mi vel ante laoreet laoreet. Nullam et turpis vitae justo euismod luctus. Pellentesque vestibulum elit vitae orci laoreet molestie. </string>
    <string name="lbl_add_recipe"> Hi Goddess! \n\n
        To submit your recipe to possibly be shared in our library please send one or more photos of your yummy creation with instructions and ingredients to <u>info@goddesslifeapp.com</u>. Thank you for sharing and happy cooking!></string>
    <string name="goddess_of_the_month">Goddess of the Month</string>
    <string name="recipe_of_the_month">Recipe of the Month</string>
    <string name="teacher_of_the_month">Teacher of the Month</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_contact">Contact No.</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_Sign_in">Sign In</string>
    <string name="lbl_Sign_up">Sign Up</string>
    <string name="lbl_login_in">Log in</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_forgetpassword">Forget\nPassword</string>
    <string name="lbl_referral_code">Referral</string>
    <string name="lbl_forgot_password_que">Forgot Password?</string>
    <string name="lbl_dont_have_account">Don\'t have account? Sign Up</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_contact_no">Contact No.</string>
    <string name="lbl_have_account_sign_in">Have an account? Sign In</string>
    <string name="lbl_agree_sign_up">Agree &amp; Sign Up</string>
    <string name="lbl_sign_up_note">By continuing you agree to our Terms &amp; Conditions and Privacy Policy</string>
    <string name="lbl_terms_conditions">Terms &amp; Conditions</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_have_account">Have an account?</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_forgot_pwd_desc">Enter your email,we will send new password to your Email.</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_continue_with_fb">Continue with Facebook</string>
    <string name="lbl_continue_with_google">Continue with Google</string>
    <string name="hint_enter_email">Enter your Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confrim_password">Enter Confirm Password</string>
    <string name="hint_enter_name">Enter your Name</string>
    <string name="hint_enter_contact">Enter your Contact Number</string>
    <string name="hint_enter_referral">Enter Referral code</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="meal_type">%1$s - %2$s</string>
    <string name="facebook_app_id">552411208780441</string>
    <string name="fb_login_protocol_scheme">fb552411208780441</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="lbl_dessert">Dessert</string>
    <string name="lbl_snacks">Snacks</string>
    <string name="media_url_mp3"> https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_video">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>
    <string name="connection_timed_out">Connection Timed Out</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_video_library">Goddess Library</string>
    <string name="title_shop">Goddess Shop</string>
    <string name="search_recipes">Search recipes…</string>
    <string name="points">+%1$s</string>
    <string name="monthly_membership">Monthly\nmembership</string>
    <string name="yearly_membership">Yearly\nmembership</string>
    <string name="basic">Basic</string>
    <string name="premium">Premium</string>
    <string name="see_all_benifits">See All Benefits</string>
    <string name="see_less_benifits">See Less Benefits</string>
    <string name="lorem_ipsum_small">Lorem ipsum dolor sit amet, consecteur.</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="free_trial">Start your 7 days free trial</string>
    <string name="restore_purchase">Restore your purchase</string>
    <string name="subscription_desc">The new price is for new membership only. Current members will still be charged %1$s monthly / %2$s annually unless they choose to upgrade it the new gaming features and earn GODDESS points!</string>
    <string name="all_filter">All %1$s</string>
    <string name="no_video_found">No Video found!</string>
    <string name="no_videos_desc">There is no Video at the moment.</string>
    <string name="details">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="how_to_cook">instructions</string>
    <string name="serve">\u0020Serving</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="lbl_use_may_current_location">use may current location</string>
    <string name="pincode">PinCode*</string>
    <string name="address_title">Address title</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="enter_title">Enter title</string>
    <string name="house_no_building_name">House No.,Building name*</string>
    <string name="road_name_area_colony">Road name, Area, Colony*</string>
    <string name="enter_road_area_colony_">Enter Road, Area, Colony</string>
    <string name="city">City*</string>
    <string name="enter_city">Enter City</string>
    <string name="state">State*</string>
    <string name="enter_state">Enter state</string>
    <string name="landmark_optional">Landmark(Optional)</string>
    <string name="enter_building_name">Enter Building name</string>
    <string name="enter_landmark">Enter landmark</string>
    <string name="tab_to_auto_fill_the_address_fields">Tab to auto fill the address fields.</string>
    <string name="save_amp_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="no_order_found">No order found!</string>
    <string name="looks_like_you_haven_t_placed_any_order_yet">Looks like you haven\'t placed any order yet</string>
    <string name="lbl_country">Country</string>
    <string name="enter_country">Enter Country</string>
</resources>