<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/recipe_selector"
        android:title="@string/title_recipe" />

    <item
        android:id="@+id/navigation_play"
        android:icon="@drawable/ic_menu_play"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_selector"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/shopping_selector"
        android:title="@string/title_shopping" />

</menu>