<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/white">

        <com.krystal.goddesslifestyle.utils.WaveView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotation="180"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTutorialImage"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_order" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/poppins_semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/no_order_found"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wave" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMsg"
                style="@style/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/looks_like_you_haven_t_placed_any_order_yet"
                android:textAlignment="center"
                android:textColor="@color/black_text_1"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNoOrder"
                style="@style/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:background="@color/yellow"
                android:text="@string/continue_shopping"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMsg" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>